fixed spacing pf buttons and item list

--- a/src/style.css
+++ b/src/style.css
@@ -51,8 +51,7 @@ input {
 
 button {
     margin-left: 1rem;
-    padding: 0.5rem 1rem;
-
+    padding: 0.5rem 0.7rem;
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -72,7 +71,8 @@ button {
     display: flex;
     align-items: center;
     font-weight: bold;
-    font-size: larger;
+    font-size: large;
+    padding: 1.5% 0%;
 }
 
 .grocery-list li:last-child {
